k8s/dev/zalo-integration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zalo-integration-dev
spec:
  selector:
    matchLabels:
      run: zalo-integration-dev
  replicas: 1
  template:
    metadata:
      labels:
        run: zalo-integration-dev
    spec:
      containers:
        - name: zalo-integration-dev
          image: 172.76.10.150:5002/zalo-integration:dev
          command: ["node"]
          args: ["server.js"]
          ports:
            - containerPort: 80
              name: http-zalointdev
---
apiVersion: v1
kind: Service
metadata:
  name: zalo-integration-service-dev
  labels:
    run: zalo-integration-dev
spec:
  ports:
    - name: http-zalo-integration-dev
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    run: zalo-integration-dev
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: zalo-integration-gateway-dev
spec:
  selectors:
    istio: ingressgateway
  servers:
    - hosts:
        - "*"
      port:
        number: 30503
        name: http-zalo-integration-dev
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zalo-integration-virtualservice-dev
spec:
  hosts:
    - "*"
  gateways:
    - zalo-integration-gateway-dev
  http:
    - match:
        - port: 30503
          uri:
            prefix: /
      name: http-zalo-integration-dev
      route:
        - destination:
            host: zalo-integration-service-dev
            port:
              number: 80
---
